# aishwaryaj7.github.io

./: .gitignore  404.html  DEPLOYMENT_INSTRUCTIONS.md  README.md  REVERT_DESIGN.md  index.html  mkdocs.yml  mkdocs.yml.backup  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy-portfolio.yml  deploy.yml
ai-portfolio/projects/energy_price_forecasting/: Dockerfile  README.md  demo.py  requirements.txt  streamlit_app.py  train.py
ai-portfolio/projects/energy_price_forecasting/api/: main.py  schemas.py
ai-portfolio/projects/energy_price_forecasting/scripts/: deploy.sh  setup_gcp.sh
ai-portfolio/projects/energy_price_forecasting/src/: __init__.py
ai-portfolio/projects/mlops-auto-retrain-gcp/: .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  PROJECT_WALKTHROUGH.md  README.md  cloud-shell-deploy.sh  demo.py  deploy.sh  evaluate.py  quick-deploy.sh  requirements.txt  serve.py  streamlit_app.py  train.py
ai-portfolio/projects/rag-chatbot-multimodal/: README.md  env.template  test_datasets.py  test_pipeline.py  test_system.py
blog/: index.html
blog/doctract-rag-journey/: index.html
blog/energy-price-forecasting-mlops/: index.html
blog/mlflow-cloud-production/: index.html
blog/speech2text-journey/: index.html
contact/: index.html
docs/: about.md  contact.md  index.md  resume.md
docs/blog/: doctract-rag-journey.md  energy-price-forecasting-mlops.md  index.md  mcp-deep-dive.md  mlflow-cloud-production.md  mlops-cicd-pipeline.md  mlops-fastapi-deployment.md  mlops-mlflow-tracking.md  rag-monitoring-observability.md  rag-multimodal-processing.md  rag-pymupdf-weaviate.md  speech2text-journey.md
docs/projects/: index.md
docs/projects/doc-parser/: index.md
docs/projects/doctract/: index.md
docs/projects/energy-price-forecasting/: index.md
docs/projects/mlops-auto-retrain-gcp/: index.md
docs/projects/rag-chatbot-multimodal/: index.md
docs/projects/speech2text/: index.md
docs/stylesheets/: extra.css
projects/: index.html
projects/doc-parser/: index.html
projects/doctract/: index.html
projects/energy-price-forecasting/: index.html
projects/mlops-auto-retrain-gcp/: index.html
projects/speech2text/: index.html
resume/: index.html
search/: search_index.json
(+90 files in other folders)
