[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aishwaryaj7-portfolio"
version = "0.1.0"
description = "AI/ML Portfolio showcasing production-grade projects with MLOps and RAG systems"
authors = [
    {name = "Aishwarya", email = "aishwarya.jauhari@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # MLOps Project Dependencies
    "mlflow>=3.1.0",
    "numpy>=1.26.2,<2.3.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.5.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",

    # RAG Project Dependencies
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langchain-weaviate>=0.0.1",
    "weaviate-client>=4.0.0",
    "pymupdf>=1.23.0",
    "pymupdf4llm>=0.0.5",
    "pdf2image>=1.16.0",
    "Pillow>=9.0.0",
    "pytesseract>=0.3.10",

    # Monitoring & Observability
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-requests>=0.42b0",
    "opentelemetry-exporter-jaeger-thrift>=1.21.0",

    # Logging & Error Tracking
    "structlog>=23.2.0",
    "loguru>=0.7.0",
    "sentry-sdk[fastapi]>=1.38.0",

    # Additional utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "pymdown-extensions>=10.3.0",
]

[project.urls]
Homepage = "https://aishwaryaj7.github.io"
Repository = "https://github.com/aishwaryaj7/aishwaryaj7.github.io"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["ai-portfolio"]
